--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Coming Soon</h1>
+        <h1>COMING SOON</h1>
+        <br>
         <p>We are working hard to bring you our new website. Stay tuned!</p>
         <div class="countdown">
             <div class="countdown-item">
