--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </form>
     </div>
     <br>
-    <footer>
-        <p>&copy; 2025 Ken Ekweme | <a href="https://www.oteksolutions.net" target="_blank">OTek Solutions</a></p>
+    <footer class="developer-footer">
+        <p>Website by <a href="https://www.linkedin.com/in/ekweme-ken" target="_blank" rel="noopener noreferrer nofollow" title="Web Designer &amp; Developer">Ken Ekweme</a> &bull; <a href="https://www.oteksolutions.net" target="_blank" rel="noopener noreferrer nofollow" title="Designed and Developed by OTek Solutions">OTek Solutions</a> <a href="/humans.txt" style="font-size: 0.65rem;" target="_blank" title="Credits"><strong>&#x24D8;</strong></a></p>
     </footer>
     
 </body>
