--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
+    <meta name="description" content="Our website is coming soon. Subscribe to get notified when we launch.">
+    <title>Coming Soon | Our Brand New Website</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
