--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
             </div>
             <p class="progress-text">65% Complete</p>
 
-
+	<!-- Countdown Timer -->
+	    <div class="countdown">
+		<div class="countdown-item">
+		    <span class="number">30</span>
+		    <span class="label">Days</span>
+		</div>
+		<div class="countdown-item">
+		    <span class="number">12</span>
+		    <span class="label">Hours</span>
+		</div>
+		<div class="countdown-item">
+		    <span class="number">45</span>
+		    <span class="label">Minutes</span>
+		</div>
+		<div class="countdown-item">
+		    <span class="number">22</span>
+		    <span class="label">Seconds</span>
+		</div>
+	    </div>
 
 
 
