--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
 		</div>
 	    </div>
 
-
+	<!-- Notification Form -->
+            <div class="notification-form">
+                <h2>Get Notified When We Launch</h2>
+                <form class="subscribe-form">
+                    <input type="email" placeholder="Enter your email address" required>
+                    <button type="submit">Notify Me</button>
+                </form>
+                <p class="privacy-note">We respect your privacy. No spam, ever.</p>
+            </div>
 
 
 	    
